# hdf5-rust

./: .gitmodules  Cargo.toml  build.rs
hdf5-sys/: Cargo.toml  README.md  build.rs
hdf5-sys/src/: lib.rs
src/: globals.rs  lib.rs
src/hl/: attribute.rs  dataset.rs  group.rs  mod.rs
