[package]
name = "hdf5-sys"
version = "0.6.0"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license = "MIT/Apache-2.0"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rust"
homepage = "https://github.com/aldanor/hdf5-rust"
description = "Native bindings to the HDF5 library."
edition = "2018"
links = "hdf5"
exclude = [
    "source/bin/**",
    "source/c++/**",
    "source/examples/**",
    "source/fortran/**",
    "source/java/**",
    "source/release_docs/**",
    "source/test/**",
    "source/testpar/**",
    "source/tools/**",
    "source/hl/test/**",
    "source/hl/tools/**",
    "source/hl/examples/**",
]

[dependencies]
libc = "0.2"
mpi-sys = { version = "0.1", optional = true }
libz-sys = { version = "1.0.25", optional = true }

[features]
default = []
mpio = ["mpi-sys"]
hl = []
threadsafe = []
zlib = ["libz-sys"]
static = ["libz-sys/static"]
deprecated = []

[build-dependencies]
libloading = "0.5"
regex = { version = "1.3", features = ["std"] }
cmake = "0.1.42"

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
serde = "1.0"
serde_derive = "1.0"
winreg = { version = "0.6", features = ["serialization-serde"]}
